--- a/Portafolio/Portafolio.html
+++ b/Portafolio/Portafolio.html
@@ -23,19 +23,19 @@
 
     <section class="home" id="home">
         <div class="home-img">
-            <img src="/Portafolio/Assets/Images/9b6769c109764b0fb38496b713240ff5.webp" alt="">
+            <img src="/Portafolio/Assets/Images/1720108943130 (1).jpg" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Miguel</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>I'm a passionate junior full stack developer with a love for creating innovative and user-friendly web applications. With some experience spanning front-end, back-end, JavaScript, and Python, I have a growing ability to tackle complex challenges from multiple angles.</p>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/miguel-angel-cadavid-mesa-483b5b21a/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/Samael43" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href=""><i class="fa-brands fa-facebook"></i></a>
             </div>
             <div class="btn-container">
-                <a href="#" class="btn">Contact me</a>
+                <a href="#contact" class="btn">Contact me</a>
             </div>
         </div>
     </section>
@@ -46,19 +46,19 @@
             <div class="boxservices">
                 <div class="infoservices">
                     <h4>Front-end Desing</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, facilis vero ducimus tenetur at aperiam error recusandae cumque, eaque vel dolores rem fuga nisi quasi rerum esse. Nihil, mollitia voluptatibus.</p>
+                    <p>I'll create a visually appealing and responsive user interface using the latest HTML and CSS techniques, ensuring a seamless and engaging experience for your users.</p>
                 </div>
             </div>
             <div class="boxservices">
                 <div class="infoservices">
-                    <h4>Back-end Desing</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae repellendus, laudantium dicta minus eos blanditiis neque incidunt accusamus quod dolore itaque in eum corporis id excepturi eaque sequi. Commodi, facilis!</p>
+                    <h4>Back-end Development</h4>
+                    <p>I'll develop the server-side logic and functionality using robust and techniques with Python.</p>
                 </div>
             </div>
             <div class="boxservices">
                 <div class="infoservices">
                     <h4>Java Script</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae repellendus, laudantium dicta minus eos blanditiis neque incidunt accusamus quod dolore itaque in eum corporis id excepturi eaque sequi. Commodi, facilis!</p>
+                    <p>I'll develop SPA applications that provide a smooth and efficient user experience, with minimal page refreshes and optimized data fetching.</p>
                 </div>
             </div>
         </div>
@@ -70,15 +70,27 @@
             <div class="row" id="secondary-skills-container">
                 <div class="bar">
                     <div class="info">
-                        <img src="/Portafolio/Assets/Images/Python icono draft.png">
+                        <img src="/Portafolio/Assets/Images/Python Icon.png">
                         <span>Python</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="/Portafolio/Assets/Images/Java Script.png">
-                        <span>Java Script</span>
+                        <img src="/Portafolio/Assets/Images/Html Icon.png">
+                        <span>HTML</span>
                     </div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                        <img src="/Portafolio/Assets/Images/Css Icon.png">
+                        <span>CSS</span>
+                    </div>   
+                </div>
+                <div class="bar">
+                    <div class="info">
+                        <img src="/Portafolio/Assets/Images/Java Script Icon.png">
+                        <span>Java Script</span>
+                    </div>   
                 </div>
             </div>
         </div>
@@ -100,8 +112,8 @@
 
     <footer>
         <div class="social">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/miguel-angel-cadavid-mesa-483b5b21a/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Samael43" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-brands fa-facebook"></i></a>
         </div>
         <ul class="list-footer">
