Final Draft Proyecto Integrador

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section class="home" id="home">
         <div class="home-img">
-            <img src="/Portafolio/Assets/Images/1720108943130 (1).jpg" alt="">
+            <img src="/Assets/Images/1720108943130 (1).jpg" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Miguel</span></h1>
@@ -58,7 +58,7 @@
             <div class="boxservices">
                 <div class="infoservices">
                     <h4>Java Script</h4>
-                    <p>I'll develop SPA applications that provide a smooth and efficient user experience, with minimal page refreshes and optimized data fetching.</p>
+                    <p>I'll develop Web Sites that provide a smooth and efficient user experience, with minimal page refreshes and optimized data fetching.</p>
                 </div>
             </div>
         </div>
@@ -70,25 +70,25 @@
             <div class="row" id="secondary-skills-container">
                 <div class="bar">
                     <div class="info">
-                        <img src="/Portafolio/Assets/Images/Python Icon.png">
+                        <img src="/Assets/Images/Python Icon.png">
                         <span>Python</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="/Portafolio/Assets/Images/Html Icon.png">
+                        <img src="/Assets/Images/Html Icon.png">
                         <span>HTML</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="/Portafolio/Assets/Images/Css Icon.png">
+                        <img src="/Assets/Images/Css Icon.png">
                         <span>CSS</span>
                     </div>   
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="/Portafolio/Assets/Images/Java Script Icon.png">
+                        <img src="/Assets/Images/Java Script Icon.png">
                         <span>Java Script</span>
                     </div>   
                 </div>
